--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "engine": "node >= 8.0.0",
   "main": "index.js",
   "repository": {
-    "url": "git@github.com:bitpay/bitcore-wallet-client.git",
+    "url": "git@github.com:zcore-coin/zcoreapp-2.0-bitcore-wallet-client.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/bitpay/bitcore-wallet-client/issues"
+    "url": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-wallet-client/issues"
   },
   "dependencies": {
     "async": "^0.9.0",
     "bip38": "^1.3.0",
-    "bitcore-lib": "=0.16.0",
-    "bitcore-lib-cash": "=0.19.0",
-    "bitcore-mnemonic": "^1.3.0",
-    "bitcore-payment-protocol": "^1.7.0",
+    "bitcore-lib": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-lib",
+    "bitcore-lib-cash": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-lib-cash",
+    "bitcore-mnemonic": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-mnemonic",
+    "bitcore-payment-protocol": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-payment-protocol",
     "json-stable-stringify": "^1.0.0",
     "lodash": "^4.17.11",
     "preconditions": "^2.2.1",
@@ -37,7 +37,7 @@
     "superagent": "^3.4.1"
   },
   "devDependencies": {
-    "bitcore-wallet-service": "2.5.1",
+    "bitcore-wallet-service": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-wallet-service",
     "browserify": "^13.1.0",
     "chai": "^1.9.1",
     "coveralls": "^3.0.2",
