--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcore-wallet-client",
   "description": "Client for bitcore-wallet-service",
   "author": "BitPay Inc",
-  "version": "6.8.1",
+  "version": "8.1.1",
   "license": "MIT",
   "keywords": [
     "bitcoin",
@@ -24,13 +24,13 @@
     "url": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-wallet-client/issues"
   },
   "dependencies": {
+    "ajv": "^6.10.0",
     "async": "^0.9.0",
     "bip38": "^1.3.0",
     "bitcore-lib": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-lib",
     "bitcore-lib-cash": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-lib-cash",
     "bitcore-mnemonic": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-mnemonic",
-    "bitcore-payment-protocol": "https://github.com/zcore-coin/zcoreapp-2.0-bitcore-payment-protocol",
-    "json-stable-stringify": "^1.0.0",
+    "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.11",
     "preconditions": "^2.2.1",
     "sjcl": "1.0.3",
@@ -52,6 +52,7 @@
     "start": "node app.js",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --reporter spec test",
     "test": "./node_modules/.bin/mocha --exit",
+    "test:ci": "npm run test",
     "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "docs": "./node_modules/.bin/jsdox lib/* lib/common lib/errors -o docs && cat README.header.md  docs/*.md LICENSE > README.md"
   }
